--- a/src/components/Note.module.css
+++ b/src/components/Note.module.css
@@ -4,7 +4,8 @@
   border: 1px solid rgba(128, 128, 128, 0.5);
   background-color: white;
   position: absolute;
-  transition: transform 0.2s;
+  opacity: 0;
+  transition: transform 0.2s, opacity 0.5s;
 }
 
 .title {
