--- a/src/components/AddNote.module.css
+++ b/src/components/AddNote.module.css
@@ -1,41 +1,76 @@
 .add-note-container {
   margin-top: 4rem; /* TODO: Remove when navbar is on */
   padding: 2rem 0;
-  background-color: cadetblue;
 }
 
-.form {
+.add-note-body {
   margin: 0 auto;
   width: min(90%, 600px);
   height: auto;
   max-height: 80vh;
+  background-color: white;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
-.form:hover {
-  cursor: text;
-}
-
-.description {
+/* .inputs {
   width: 100%;
   margin: 0 auto;
-  background-color: white;
   position: relative;
-}
+} */
 
-.description .placeholder {
-  padding: 1rem;
-  position: absolute;
-  pointer-events: none;
-}
-
-.description .content {
-  resize: none;
-  outline: none;
+.inputs .title {
+  width: 100%;
   border: none;
+  outline: none;
+  padding: 0.7rem 1rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.inputs .description {
+  display: block;
   padding: 1rem;
   margin: 0;
+  border: none;
+  resize: none;
+  outline: none;
   width: 100%;
-  max-height: 40vh;
-  font-family: inherit;
   font-size: inherit;
+  overflow: auto;
+}
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+
+.actions .toolbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.actions .close {
+  background-color: transparent;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-weight: 500;
+  border-radius: 0.2rem;
+  transition: background-color 0.05s;
+}
+
+.actions .close:hover {
+  background-color: rgba(100, 100, 100, 0.05);
+  cursor: pointer;
+}
+.actions .close:hover:active {
+  background-color: rgba(90, 90, 90, 0.2);
+  cursor: pointer;
 }
