--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   font-family: "Google Sans", Roboto, Arial, sans-serif;
+  letter-spacing: 0.015rem;
 
   color: black;
   background-color: #fff;
@@ -16,6 +17,7 @@
 
 html,
 body,
-p {
+p,
+div {
   margin: 0;
 }
